# streamlabs-socketio-py

./: .gitignore  CHANGELOG.md  README.md  __main__.py  pyproject.toml  scripts.py
examples/debug/: README.md  __main__.py
streamlabsio/: client.py  error.py  models.py
