[tool.poetry]
name = "streamlabsio"
version = "1.1.1"
description = "Get real time Twitch/Youtube events through Streamlabs SocketIO API"
authors = ["onyx-and-iris <code@onyxandiris.online>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/onyx-and-iris/streamlabs-socketio-py"

[tool.poetry.dependencies]
python = "^3.8"
tomli = { version = "^2.0.1", python = "<3.11" }
python-engineio = "3.14.2"
python-socketio = { version = "4.6.0", extras = ["client"] }
observable = "^1.0.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
tox = "^4.6.3"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
debug = "scripts:ex_debug"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311

[testenv]
allowlist_externals = poetry
commands =
  poetry install -v
  poetry run pytest tests/
"""
